# moolah-old

./: .gitignore  Cargo.toml  README.md  diesel.toml
backend/: Cargo.toml
backend/src/: errors.rs  main.rs  services.rs
backend/src/services/: account.rs  deltas.rs  login.rs  logout.rs  predictions.rs  register.rs  user.rs
frontend/: Cargo.toml  index.html  trunk.toml
frontend/src/: app.rs  components.rs  errors.rs  main.rs  pages.rs  requests.rs  services.rs
frontend/src/components/: app_context.rs  footer.rs  header.rs  home.rs  loading.rs  prediction_panel.rs  unauthorized.rs
frontend/src/components/home/: new_delta.rs  new_prediction.rs  prediction_panel.rs
frontend/src/pages/: account.rs  home.rs  login.rs  logout.rs  register.rs
frontend/src/requests/: requester.rs  tests.rs
frontend/src/services/: identity.rs  requests.rs
migrations/2022-06-19-154442_create_users/: up.sql
migrations/2022-06-26-203053_create_predictions/: up.sql
migrations/2022-06-26-220318_add_user_datetimes/: down.sql  up.sql
migrations/2022-06-27-000132_create_deltas/: down.sql  up.sql
migrations/2022-06-28-012818_create_delta_dates/: down.sql  up.sql
migrations/2022-06-29-033342_create_deltas/: down.sql  up.sql
migrations/2022-07-11-223001_fix_predictions_unique_key/: down.sql  up.sql
shared/: Cargo.toml
shared/src/: errors.rs  lib.rs  models.rs  path_patterns.rs  routes.rs  schema.rs
shared/src/models/: delta_dates.rs  deltas.rs  predictions.rs  users.rs
shared/src/models/deltas/: app.rs  daily_deltas.rs  db.rs  monthly_deltas.rs  once_deltas.rs  weekly_deltas.rs
shared/src/models/deltas/app/: delta.rs  repetition.rs
shared/src/models/deltas/app/delta/: tests.rs
shared/src/models/deltas/app/repetition/: tests.rs
shared/src/models/deltas/db/: db_date_repetition.rs  db_delta.rs
