[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
actix-identity = "0.4"
r2d2 = "0.8"
env_logger = "0.8"
log = "0.4"
thiserror = "1.0"
shared = { path = "../shared" }
