[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
web-sys = "0.3"
weblog = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
gloo-storage = "0.2"
gloo-dialogs = "0.1"
regex = "1.5"
shared = { path = "../shared" }
