[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.8", features = ["chrono"] }
validator = { version = "0.15", features = ["derive"] }
regex = "1.5"
lazy_static = "1.4"
dotenv = "0.15.0"
thiserror = "1.0"
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
argon2 = { version = "0.4", features = ["std"], default-features = true }
